--- a/src/Shared/Cqrs/Cqrs/Cqrs.csproj
+++ b/src/Shared/Cqrs/Cqrs/Cqrs.csproj
@@ -19,4 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\SharedKernel\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Configuration\" />
+  </ItemGroup>
 </Project>
