--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -32,10 +32,14 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AzureServiceBus": {
-    "Enabled": true,
-    "ConnectionString": "Endpoint=sb://localhost;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;",
-    "Sender": {
+  "CqrsSettings": {
+    "OutboxConfiguration": {
+      "MaxProcessingAttempts": 3,
+      "BatchSize": 10,
+      "LockDurationInSeconds": 60
+    },
+    "DispatchSettings": {
+      "DefaultTopic": "cars-events",
       "Queues": [],
       "Topics": [ "cars-events" ]
     },
@@ -46,7 +50,11 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
         "AutoCompleteMessages": false,
         "MaxConcurrentCalls": 1
       }
-    ]
+    ],
+    "AzureServiceBus": {
+      "Enabled": true,
+      "ConnectionString": "Endpoint=sb://localhost;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;"
+    }
   },
   "UseOnlyInMemoryDatabase": true,
   "AllowedHosts": "*"
