--- a/src/Shared/Cqrs/Cqrs.EntityFrameworkCore/Cqrs.EntityFrameworkCore.csproj
+++ b/src/Shared/Cqrs/Cqrs.EntityFrameworkCore/Cqrs.EntityFrameworkCore.csproj
@@ -13,5 +13,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
   </ItemGroup>
 </Project>
