--- a/tests/unit/shared/Cqrs/Cqrs.EntityFrameworkCore.UnitTests/Cqrs.EntityFrameworkCore.UnitTests.csproj
+++ b/tests/unit/shared/Cqrs/Cqrs.EntityFrameworkCore.UnitTests/Cqrs.EntityFrameworkCore.UnitTests.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="NSubstitute" />
     <PackageReference Include="Shouldly" />
